# Switch-ROM-Tools

./: .gitignore  README.md  meson.build  org.tsutsen.SwitchROMTools.flatpak  org.tsutsen.SwitchROMTools.json  pypi-dependencies.json  requirements.txt
data/: meson.build  org.tsutsen.SwitchROMTools.desktop.in  org.tsutsen.SwitchROMTools.gschema.xml  org.tsutsen.SwitchROMTools.metainfo.xml.in  org.tsutsen.SwitchROMTools.service.in
data/icons/: meson.build
flatpak/: org.tsutsen.SwitchROMTools.json
po/: POTFILES.in  meson.build
src/: main.py  meson.build  switchromtools.gresource.xml  switchromtools.in  window.py  window.ui
